<resources>
    <string name="app_name">IITP App</string>
    <string name="title_activity_timetable">Timetable</string>

    <string name="iitp_web">http://iitpapp.herokuapp.com/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="logo">Logo</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="login">Proceed</string>
    <string name="webmail_username">Webmail</string>

    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <string name="default_notification_channel_id">notifications</string>
    <string name="default_notification_channel_description">All the notifications are sent through this channel.</string>

    <string name="test_notification_channel_id">test_notifications</string>
    <string name="test_notification_channel_description">Test notifications are sent through this channel.</string>

    <string name="nav_header_title">Guest</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="hint_add_feed_description">Enter description (Markdown and basic HTML syntax supported)\nUse &lt;br&gt; tag for line break\nUse &lt;a href=\'link\'&gt;Text&lt;/a&gt;\nor [Link text](https://link) for including links\nUse ![image name](https://image_link) for displaying images.\nUse **text** for bold and *text* for italic</string>
    <string name="FCM_authorization">Enter FCM Server Token Here</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="send_help">Send help!</string>
    <string name="back_to_login">Back to login ?</string>
    <string name="placeholder_text_feed_description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of de Finibus Bonorum et Malorum(The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, Lorem ipsum dolor sit amet.., comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from de Finibus Bonorum et Malorum by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
    <string name="enter_date">Enter Date</string>
    <string name="name">Name:</string>
    <string name="no_i_found_something">No, I found something.</string>
    <string name="did_you_lose_something">Did you lose something?</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="what">What?</string>
    <string name="describe_the_item_briefly">Describe the item briefly.</string>
    <string name="where">Where?</string>
    <string name="place_where_lost_found">Place where lost/found</string>
    <string name="when">When?</string>
    <string name="enter_time">Enter Time</string>
    <string name="phone_number">Phone number</string>
    <string name="post">Post</string>
    <string name="contact">Contact:</string>
    <string name="suggestion_compose_notification">Keep image size small for successful delivery of notification.\nAttached link will be opened when user clicks view button after opening a notification.\nTitle should be short.\nIf your notification contains image, the body should also be short, else, the body can be long.\nDescription can be as long as you like.</string>
    <string-array name="agenda_categories_spinner">
        <item>Select-Category</item>
        <item>Maintenance</item>
        <item>Security</item>
        <item>Hygiene and Cleaning</item>
        <item>Sanitation</item>
        <item>Academic</item>
        <item>Mess and Food</item>
        <item>Hostel rooms</item>
        <item>Other</item>
    </string-array>

    <string-array name="list_hint_audience">
        <item>1901</item>
        <item>1911</item>
        <item>1921</item>
        <item>1912</item>
        <item>1801</item>
        <item>1811</item>
        <item>1821</item>
        <item>1812</item>
        <item>1701</item>
        <item>1711</item>
        <item>1721</item>
        <item>1712</item>
        <item>1601</item>
        <item>1611</item>
        <item>1621</item>
        <item>1612</item>
        <item>ee</item>
        <item>me</item>
        <item>cs</item>
        <item>cb</item>
        <item>ce</item>
        <item>mm</item>
        <item>1901ee</item>
        <item>1901me</item>
        <item>1901cs</item>
        <item>1901cb</item>
        <item>1901ce</item>
        <item>1901mm</item>
        <item>1801ee</item>
        <item>1801me</item>
        <item>1801cs</item>
        <item>1801cb</item>
        <item>1801ce</item>
        <item>1701ee</item>
        <item>1701me</item>
        <item>1701cs</item>
        <item>1701cb</item>
        <item>1701ce</item>
        <item>1601ee</item>
        <item>1601me</item>
        <item>1601cs</item>
        <item>1601cb</item>
        <item>1601ce</item>
    </string-array>

</resources>
