<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/very_light_grey"
    tools:context=".account.LoginFragment">

    <LinearLayout
        android:id="@+id/login_cover_ll"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/gradient_splash_background"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            app:cardCornerRadius="65dp"
            app:cardElevation="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/logo"
                android:src="@drawable/profile_photo" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/forgot_password"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:maxWidth="400dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/login_login_button"
        app:layout_constraintTop_toBottomOf="@id/login_cover_ll"
        tools:ignore="ContentDescription">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_person_black_24dp"
                android:tint="#555" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:textColorHint="@color/shadow">

                <EditText
                    android:id="@+id/login_input_webmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/webmail_username"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    tools:text="1801ee03@iitp.ac.in">

                    <requestFocus />
                </EditText>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <TextView
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/login"
            android:gravity="end"
            android:layout_gravity="end"
            android:text="@string/back_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#171132"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/send_help"
        android:textColor="#fff" />

</LinearLayout>