<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/very_light_grey"
    android:id="@+id/signin_main_layout"
    android:orientation="vertical"
    tools:context=".account.LoginActivity">

    <LinearLayout
        android:id="@+id/login_cover_ll"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/gradient_splash_background"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="75dp">

            <ImageView
                android:contentDescription="@string/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/profile_photo"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/welcome"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:maxWidth="400dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/login_login_button"
        app:layout_constraintTop_toBottomOf="@id/login_cover_ll"
        tools:ignore="ContentDescription" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_person_black_24dp"
                android:tint="#555"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/login_input_webmail"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/webmail_username"
                    android:inputType="text"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_fingerprint_black_24dp"
                android:tint="#555" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:textColorHint="@color/black"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/login_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:text=""
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    tools:ignore="UnusedAttribute" />
                
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/login_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_style"
        android:text="@string/login"
        android:textColor="#fff"
        android:backgroundTint="#171132"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>