<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/very_light_grey"
    tools:context=".account.LoginFragment">

    <LinearLayout
        android:id="@+id/login_cover_ll"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/gradient_splash_background"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            app:cardCornerRadius="65dp"
            app:cardElevation="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/logo"
                android:src="@drawable/profile_photo" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/welcome"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:maxWidth="400dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/login_signup_ll"
        app:layout_constraintTop_toBottomOf="@id/login_cover_ll"
        tools:ignore="ContentDescription">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_person_black_24dp"
                android:tint="#555" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:textColorHint="@color/shadow">

                <EditText
                    android:id="@+id/login_input_webmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/webmail_username"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:textColor="@color/black"
                    android:maxLength="19"
                    android:nextFocusDown="@id/login_input_password"
                    tools:text="1801ee03@iitp.ac.in" >

                    <requestFocus/>
                </EditText>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_fingerprint_black_24dp"
                android:tint="#555" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:textColorHint="@color/shadow"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/login_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:nextFocusForward="@id/login_login_button"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    tools:ignore="UnusedAttribute"
                    tools:text="testing" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_signup_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/login_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/button_style"
            android:backgroundTint="#171132"
            android:text="@string/login"
            android:textColor="#fff" />

        <Button
            android:id="@+id/login_signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/button_style"
            android:backgroundTint="#171132"
            android:text="SignUp"
            android:textColor="#fff" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>